--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -14,7 +14,7 @@
     <script src="js/models/book.model.js"></script>
     <script src="js/views/book.view.js"></script>
     <script src="js/services/book.service.js"></script>
-    <script src="js/controller/"></script>
+    <script src="js/controller/book.controller.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
