--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -11,10 +11,9 @@
         
     </div>
 
-    <script src="js/models/book.model.js"></script>
-    <script src="js/views/book.view.js"></script>
-    <script src="js/services/book.service.js"></script>
-    <script src="js/controller/book.controller.js"></script>
-    <script src="js/app.js"></script>
+    <script src="../views/book.view.js"></script>
+    <script src="../models/book.model.js"></script>
+    <script src="../controller/book.controller.js"></script>
+    <script src="../app.js"></script>
 </body>
 </html>
