--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -13,6 +13,7 @@
 
     <script src="../views/book.view.js"></script>
     <script src="../models/book.model.js"></script>
+    <script src="../services/book.service.js"></script>
     <script src="../controller/book.controller.js"></script>
     <script src="../app.js"></script>
 </body>
