--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <link rel="stylesheet" href="./assets/themify-icons/themify-icons.css" />
-    <div class="root"></div>
+    <div id="root"></div>
     <script src="../app.js"></script>
   </body>
 </html>
