--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -7,8 +7,11 @@
     <title>Library App</title>
   </head>
   <body>
-    <link rel="stylesheet" href="./assets/themify-icons/themify-icons.css" />
+    <link
+      rel="stylesheet"
+      href="../resources/assets/themify-icons/themify-icons.css"
+    />
     <div id="root"></div>
-    <script src="../app.js"></script>
+    <script type="module" src="../app.js"></script>
   </body>
 </html>
