--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="../resources/assets/themify-icons/themify-icons.css"
     />
+    <link rel="stylesheet" href="stylesheets/main.scss" />
     <div id="root"></div>
     <script type="module" src="../app.js"></script>
   </body>
